[project]
name = "nba-injury-alert"
version = "0.1.0"
description = "NBA injury alert service"
authors = [
    {name = "Kyle Maass",email = "kmaassrock@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "psycopg[binary] (>=3.2.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
